Runestone gen now has callback. Stone circle config moved to json.